# GameJam2020

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: build.yml  buildwin.yml  docs.yml
assets/: #map.txt#  list.json  map.txt
assets/buttons/: main_menu.txt
assets/entities/: DragonMan.json  archer.json  bigSlime.json  bomberman.json  dragon.json  ghost.json  goblin.json  imp.json  lonk.json  ninja.json  test.json  thief.json  vloger.json  warrior.json
assets/items/: pickaxe.json
assets/menus/: main_menu.txt
docs/: AStarNode_8hpp.html  AStarNode_8hpp_source.html  AiController_8cpp.html  AiController_8cpp_source.html  AiController_8hpp.html  AiController_8hpp_source.html  Air_8cpp.html  Air_8cpp_source.html  Air_8hpp.html  Air_8hpp_source.html  Archer_8cpp.html  Archer_8cpp_source.html  Archer_8hpp.html  Archer_8hpp_source.html  BigSlime_8cpp.html  BigSlime_8cpp_source.html  BigSlime_8hpp.html  BigSlime_8hpp_source.html  Block_8cpp.html  Block_8cpp_source.html  Block_8hpp.html  Block_8hpp_source.html  Bomberman_8cpp.html  Bomberman_8cpp_source.html  Bomberman_8hpp.html  Bomberman_8hpp_source.html  Character_8cpp.html  Character_8cpp_source.html  Character_8hpp.html  Character_8hpp_source.html  Chest_8cpp.html  Chest_8cpp_source.html  Chest_8hpp.html  Chest_8hpp_source.html  DragonMan_8cpp.html  DragonMan_8cpp_source.html  DragonMan_8hpp.html  DragonMan_8hpp_source.html  Enemy_8cpp.html  Enemy_8cpp_source.html  (+370 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+84 more)
nlohmann/: json.hpp
src/: Exceptions.cpp  Exceptions.hpp  Game.cpp  Game.hpp  Loader.cpp  Loader.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  Position.hpp  Resources.cpp  Resources.hpp  Size.hpp  Utils.cpp  Utils.hpp  main.cpp
src/Blocks/: Block.cpp  Block.hpp  HardBlock.cpp  HardBlock.hpp
src/Blocks/Objects/: Air.cpp  Air.hpp  Chest.cpp  Chest.hpp  HardBlock.cpp  HardBlock.hpp  Pot.cpp  Pot.hpp  Radio.cpp  Radio.hpp  Trap1.cpp  Trap1.hpp  Trap2.cpp  Trap2.hpp  Wall.cpp  Wall.hpp
src/Entities/: Character.cpp  Character.hpp  Entity.cpp  Entity.hpp
src/Entities/Characters/: Character.cpp  Character.hpp  Enemy.hpp  Player.hpp
src/Entities/Characters/AI/: AStarNode.hpp  AiController.cpp  AiController.hpp
src/Entities/Characters/Enemies/: Archer.cpp  Archer.hpp  Bomberman.cpp  Bomberman.hpp  Enemy.cpp  Enemy.hpp  Lonk.cpp  Lonk.hpp  Ninja.cpp  Ninja.hpp  Thief.cpp  Thief.hpp  Vloger.cpp  Vloger.hpp  Warrior.cpp  Warrior.hpp
src/Entities/Characters/Players/: BigSlime.cpp  BigSlime.hpp  DragonMan.cpp  DragonMan.hpp  Ghost.cpp  Ghost.hpp  Goblin.cpp  Goblin.hpp  Imp.cpp  Imp.hpp  Player.cpp  Player.hpp
src/Entities/Items/: Item.cpp  Item.hpp  Pickaxe.cpp  Pickaxe.hpp
src/Input/: Input.cpp  Input.hpp  SFMLJoypad.cpp  SFMLJoypad.hpp  SFMLKeyboard.cpp  SFMLKeyboard.hpp
src/Menus/: Exceptions.hpp  InGameMenu.cpp  InGameMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  MenuMgr.cpp  MenuMgr.hpp
src/Objects/: Air.cpp  Air.hpp  Block.cpp  Block.hpp  HardBlock.cpp  HardBlock.hpp  Wall.cpp  Wall.hpp
src/Rendering/: Entity.cpp  Entity.hpp  Exceptions.hpp  Screen.cpp  Screen.hpp
